# MilkCat

./: .gitignore  LICENSE  Makefile.am  README.md  config.h.in  configure.ac  milkcat.sln
data/: Makefile.am
src/: Makefile.am  config.h.in  keyphrase.c  libmilkcat.cc  libmilkcat.h  libmilkcat_capi.cc  main.c  main.cc  mctools.cc  milkcat_tools.cc  neko_main.cc  nekoneko.c
src/common/: cedar.h  feature_extractor.h  get_vocabulary.cc  get_vocabulary.h  instance_data.cc  instance_data.h  maxent_classifier.cc  maxent_classifier.h  milkcat_config.h  model.cc  model.h  model_factory.cc  model_factory.h  model_impl.cc  model_impl.h  reimu_trie.cc  reimu_trie.h  static_array.h  static_hashtable.h  trie_tree.cc  trie_tree.h  word_frequency_count.cc  word_frequency_count.h
src/include/: milkcat-c.h  milkcat.h
src/keyphrase/: document.cc  document.h  libkeyphrase.cc  phrase.h  phrase_extractor.cc  phrase_extractor.h  phrase_ranker.cc  phrase_ranker.h  string_table.h
src/milkcat/: beam.h  bigram_segmenter.cc  bigram_segmenter.h  crf_model.cc  crf_model.h  crf_part_of_speech_tagger.cc  crf_part_of_speech_tagger.h  crf_segmenter.cc  crf_segmenter.h  crf_tagger.cc  crf_tagger.h  darts.h  dependency_instance.cc  dependency_instance.h  dependency_parser.cc  dependency_parser.h  dependency_parser_features.cc  feature_extractor.h  hmm_model.cc  hmm_model.h  hmm_part_of_speech_tagger.cc  hmm_part_of_speech_tagger.h  instance_data.cc  instance_data.h  libmilkcat-c.cc  libmilkcat.cc  libmilkcat.h  milkcat.h  milkcat_config.h  mixed_segmenter.cc  mixed_segmenter.h  out_of_vocabulary_word_recognition.cc  out_of_vocabulary_word_recognition.h  part_of_speech_tag_instance.cc  part_of_speech_tag_instance.h  part_of_speech_tagger.h  segmenter.h  static_array.h  static_hashtable.h  term_instance.cc  (+8 more)
src/ml/: averaged_multiclass_perceptron.cc  averaged_multiclass_perceptron.h  beam.h  crf_model.cc  crf_model.h  crf_tagger.cc  crf_tagger.h  feature_set.cc  feature_set.h  hmm_model.cc  hmm_model.h  maxent_classifier.cc  multiclass_perceptron  multiclass_perceptron.cc  multiclass_perceptron.h  multiclass_perceptron_model.cc  multiclass_perceptron_model.h  packed_score.h  perceptron.cc  perceptron.h  perceptron_model.cc  perceptron_model.h  sequence_feature_extractor.h  sequence_feature_set.h
src/neko/: bigram_anal.cc  bigram_anal.h  candidate.cc  candidate.h  crf_vocab.cc  crf_vocab.h  final_rank.cc  final_rank.h  maxent_classifier.cc  maxent_classifier.h  mutual_information.cc  mutual_information.h
src/nekoneko/: candidate.cc  extract_adjent.cc  final_rank.cc  get_crf_vocabulary.cc  get_vocabulary.cc  libnekoneko.cc  libnekoneko.h  maxent_classifier.cc  maxent_classifier.h  mutual_information.cc  nekoneko.h
src/newword/: adjent_entropy.cc  candidate.cc  mutual_information.cc  newword.cc  newword.h  rank.cc  utf8.h  vocabulary.cc
src/parser/: beam.h  beam_arceager_dependency_parser.cc  beam_arceager_dependency_parser.h  beam_yamada_parser.cc  beam_yamada_parser.h  bigram_segmenter.cc  bigram_segmenter.h  crf_model.cc  crf_part_of_speech_tagger.cc  crf_part_of_speech_tagger.h  crf_segmenter.cc  crf_segmenter.h  crf_tagger.cc  crf_tagger.h  dependency_feature.cc  dependency_feature.h  dependency_instance.cc  dependency_instance.h  dependency_node.h  dependency_parser.cc  dependency_parser.h  dependency_parser_features.cc  dependency_state.cc  dependency_state.h  feature_extractor.h  feature_template-inl.h  feature_template.cc  feature_template.h  hmm_model.cc  hmm_part_of_speech_tagger.cc  hmm_part_of_speech_tagger.h  instance_data.cc  instance_data.h  libmilkcat.cc  libmilkcat.h  mixed_segmenter.cc  mixed_segmenter.h  naive_arceager_dependency_parser.cc  naive_arceager_dependency_parser.h  node.h  (+25 more)
src/phrase/: document.cc  document.h  phrase.cc  phrase_extractor.cc  phrase_extractor.h  string_value.h
src/segmenter/: bigram_segmenter.cc  bigram_segmenter.h  crf_segmenter.cc  crf_segmenter.h  mixed_segmenter.cc  mixed_segmenter.h  out_of_vocabulary_word_recognition.cc  out_of_vocabulary_word_recognition.h  out_of_vocabulary_word_recognizer.cc  out_of_vocabulary_word_recognizer.h  segmenter.h  term_instance.cc  term_instance.h
src/tagger/: crf_part_of_speech_tagger.cc  crf_part_of_speech_tagger.h  hmm_part_of_speech_tagger.cc  hmm_part_of_speech_tagger.h  part_of_speech_tag_instance.cc  part_of_speech_tag_instance.h  part_of_speech_tagger.cc  part_of_speech_tagger.h
src/test/: dependency_test.cc  milkcat_c_api_test.c
src/tests/: dependency_test.cc  perceptron_test.cc  reimu_trie_test.cc
src/tokenizer/: token_instance.cc  token_instance.h  token_lex.cc  token_lex.h  tokenizer.cc  tokenizer.h
src/tools/: dependency_parser_train.cc
src/util/: encoding.cc  encoding.h  encoding_posix.cc  encoding_windows.cc  mutex.h  mutex_posix.cc  mutex_windows.cc  pool.h  readable_file.cc  readable_file.h  string_builder.h  strtok_r.cc  util.cc  util.h  util_posix.cc  util_windows.cc  writable_file.cc  writable_file.h
src/utils/: log.cc  log.h  mutex-linux.cc  mutex.h  mutex_posix.cc  pool.h  readable_file.cc  readable_file.h  status.h  string_builder.h  strlcpy.cc  thread.h  thread_posix.cc  utils.cc  utils.h  utils_posix.cc  writable_file.cc  writable_file.h
swig/: milkcat_capi.i  milkcat_capi.py  milkcat_capi_wrap.c
test/: milkcat_api_test.cc  milkcat_capi_test.c  milkcat_windows_test.cc  parser_orcale_test.cc  reimu_trie_test.cc
vsproject/: milkcat.vcxproj  milkcat.vcxproj.filters
vsprojects/milkcat/: milkcat.vcxproj  milkcat.vcxproj.filters
vsprojects/milkcat_windows_test/: milkcat_windows_test.vcxproj  milkcat_windows_test.vcxproj.filters
