dist_pkgdata_DATA = bigram.bin \
                    ctb_pos.crf \
                    ctb_pos.hmm \
                    ctb_seg.crf \
                    oov_property.idx \
                    unigram.bin \
                    person_name.maxent \
                    unigram.idx \
                    stopword.idx \
                    tfidf.bin \
                    depparse.templ